[gd_scene load_steps=35 format=2]

[ext_resource path="res://LighthouseLevelEvents.gd" type="Script" id=1]
[ext_resource path="res://Levels/Level.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/lighthouse_tiles.png" type="Texture" id=3]
[ext_resource path="res://DeathArea.gd" type="Script" id=4]
[ext_resource path="res://Sound/Music/Original/Deflemask/PillarsOfDestruction.wav" type="AudioStream" id=5]
[ext_resource path="res://Sprites/clouds.png" type="Texture" id=6]
[ext_resource path="res://ScrollingParallaxLayer.gd" type="Script" id=7]
[ext_resource path="res://Sprites/Backgrounds/lighthouse_level_bg.png" type="Texture" id=8]
[ext_resource path="res://Sprites/lighouse_gate.png" type="Texture" id=9]
[ext_resource path="res://Sprites/lighouse_gate_in.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Backgrounds/lighthouse_sky.png" type="Texture" id=11]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=1]
0/name = "lighthouse_tiles.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 160 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 2410, 74.5 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 11.5, 10 )

[node name="LighthouseLevel" instance=ExtResource( 2 )]
sky_color = Color( 0.121569, 0.121569, 0.121569, 1 )
lighthouse_level = true
level_music = ExtResource( 5 )

[node name="SpawnPoint" parent="." index="1"]
position = Vector2( -218, -88 )

[node name="LighthouseLevelEvents" type="Node2D" parent="." index="7"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="8"]

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground" index="0"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3" index="0"]
position = Vector2( -10, -1066 )
texture = ExtResource( 11 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground" index="1"]
motion_mirroring = Vector2( 5504, 0 )
script = ExtResource( 7 )
scroll_speed = -5.0

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer" index="0"]
position = Vector2( 1014, -144 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 5504, 1140 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground" index="2"]

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/ParallaxLayer2" index="0"]
margin_left = -318.0
margin_top = -156.0
margin_right = -158.0
margin_bottom = 171.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )

[node name="ColorRect2" type="ColorRect" parent="ParallaxBackground/ParallaxLayer2" index="1"]
margin_left = 172.0
margin_top = -160.0
margin_right = 332.0
margin_bottom = 167.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2" index="2"]
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 0, 0, 480, 688 )

[node name="TileMap" type="TileMap" parent="." index="9"]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -65544, 536870912, 262144, -65543, 536870912, 262144 )

[node name="DeathArea" type="Area2D" parent="." index="10"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea" index="0"]
position = Vector2( 11, 231.5 )
shape = SubResource( 22 )

[node name="LighthouseGate" type="Node2D" parent="." index="11"]
position = Vector2( 183, -79 )
z_index = -1

[node name="Sprite" type="Sprite" parent="LighthouseGate" index="0"]
texture = ExtResource( 9 )

[node name="Area2D" type="Area2D" parent="LighthouseGate" index="1"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LighthouseGate/Area2D" index="0"]
position = Vector2( 0.5, 6 )
shape = SubResource( 23 )

[node name="InGate" type="Sprite" parent="." index="12"]
z_index = -1
texture = ExtResource( 10 )

[connection signal="body_entered" from="DeathArea" to="DeathArea" method="_on_DeathArea_body_entered"]
[connection signal="body_entered" from="LighthouseGate/Area2D" to="LighthouseLevelEvents" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="LighthouseGate/Area2D" to="LighthouseLevelEvents" method="_on_Area2D_body_exited"]
